# koalarization_torch

./: .flake8  .gitignore  README.md  Userstudy.ipynb  pyproject.toml  setup.cfg
koala/: __init__.py  data.py  decoder.py  encoder.py  evaluate.py  fusion.py  make_subset.py  network.py  resnet_utils.py  train.py
report/: DATA.md  PLANNING.md  bib.bib  main.tex
