[metadata]
name = koala
version = 0.0.1
author = Casper Smet
author_email = casper.smet@gmail.com

[options]
packages = koala
# dependency_links = https://download.pytorch.org/whl/cu113/torch_stable.html
install_requires =
    torch==1.10.2
    torchvision==0.11.3
    tensorboard
    tqdm
    matplotlib
python_requires = >=3.9
