[metadata]
name = koala
version = 1.0.1
author = Casper Smet
author_email = casper.smet@gmail.com

[options]
packages = koala
install_requires =
    torch==1.10.2
    torchvision==0.11.3
    tensorboard
    tqdm
    matplotlib
    timm
    scikit-image
    pandas
    pytorch_colors @ git+https://github.com/jorge-pessoa/pytorch-colors
python_requires = >=3.9
